Add patient creation test and enhance PatientFixture for test data